--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </li>
   </ul>
 
-  <div class="container-seat">
+  <div class="container">
     <div class="screen"></div>
 
     <div class="row">
